fix: correct about_wrap

--- a/style.css
+++ b/style.css
@@ -732,6 +732,13 @@ header nav a:hover::after {
 
 }
 
+@media (max-width: 1355px) and (min-width: 1025px) {
+  .about_wrap {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 @media (min-width: 769px) and (max-width: 1024px) {
 
   .wrap {
